# pd2-x64-converter

./: .fallowrc.json  .gitignore  .prettierignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json  vite.config.ts  wdio.conf.mjs
.github/workflows/: ci.yml  rebuild-v1.0.0-appimage.yml
crates/pd2-x64-converter-cli/: Cargo.toml
crates/pd2-x64-converter-cli/src/: main.rs
crates/pd2-x64-converter-cli/tests/: cli.rs
crates/pd2-x64-converter-core/: Cargo.toml
crates/pd2-x64-converter-core/src/: convert.rs  convert_tests.rs  error.rs  files.rs  files_tests.rs  lib.rs  manifest.rs  progress.rs  scan.rs  scan_tests.rs
crates/pd2-x64-converter-core/src/assets/: animation.rs  animation_tests.rs  font.rs  font_tests.rs  massunit.rs  massunit_tests.rs  mod.rs  scriptdata.rs  scriptdata_tests.rs  stream.rs  stream_tests.rs
crates/pd2-x64-converter-core/src/assets/model/: container.rs  geometry.rs  mod.rs  skin.rs  tests.rs
crates/pd2-x64-converter-core/src/assets/soundbank/: bank.rs  codec.rs  mod.rs  tests.rs
crates/pd2-x64-converter-core/src/assets/soundbank/hirc/: mod.rs  node.rs  objects.rs
public/: startup-theme.js
scripts/: build-appimage.sh  check-tailwind-canonical.mjs  tauri.mjs
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.e2e.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  lib_tests.rs  main.rs
src/components/: utils.ts
src/components/ui/alert-dialog/: alert-dialog-action.svelte  alert-dialog-cancel.svelte  alert-dialog-content.svelte  alert-dialog-description.svelte  alert-dialog-footer.svelte  alert-dialog-header.svelte  alert-dialog-media.svelte  alert-dialog-overlay.svelte  (+1 more)
src/features/converter/: converterView.test.ts
src/features/settings/: SettingsSheet.svelte  settings.svelte.test.ts  settings.svelte.ts  settingsStore.test.ts  settingsStore.ts
src/features/update/: VersionStatus.svelte  VersionStatus.svelte.test.ts  updateCheck.test.ts  updateCheck.ts
src/platform/github/: releasesApi.ts
src/platform/tauri/: converterApi.ts  openerApi.ts  settingsApi.ts
src/shared/: appMetadata.ts  assetPath.ts
test/e2e/: converter-native.e2e.mjs
(+87 files in other folders)
