[package]
name = "pd2-x64-converter-tauri"
version = "1.0.0"

edition.workspace = true

rust-version.workspace = true

license.workspace = true

[lints]
workspace = true

[lib]
name = "pd2_x64_converter_tauri"
path = "src/lib.rs"

[features]
default = []
e2e = [ "dep:tauri-plugin-wdio-webdriver" ]

[[bin]]
name = "pd2-x64-converter-gui"
path = "src/main.rs"

[dependencies]
pd2-x64-converter-core.workspace = true

serde.workspace = true

serde_json.workspace = true

tauri = { version = "2", features = [] }
tauri-plugin-dialog = { version = "2.7.1", default-features = false, features = [ "xdg-portal" ] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-store = "2"
tauri-plugin-wdio-webdriver = { version = "1", optional = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile.workspace = true
