[package]
name = "pd2-x64-converter-core"
version = "1.0.2"

edition.workspace = true

rust-version.workspace = true

license.workspace = true

[lints]
workspace = true

[dependencies]
flate2.workspace = true

md5.workspace = true

rayon.workspace = true

serde.workspace = true

serde_json.workspace = true

sha2.workspace = true

tempfile.workspace = true
